[package]
name = "bib_fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
urlencoding = "2.1.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
regex = "1.5.5"
clap = { version = "3.1.15", features = ["derive"] }
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
xpath_reader = "0.5.3"